--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PROJECT_PATH="/home/wrfadmin/projects/maps/projects/coglocal"
+# PROJECT_PATH="/home/wrfadmin/projects/maps/projects/coglocal"
+PROJECT_PATH="/home/wrfadmin/projects/maps/projects/demo"
