--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# PROJECT_PATH="/home/wrfadmin/projects/maps/projects/coglocal"
-PROJECT_PATH="/home/wrfadmin/projects/maps/projects/demo"
+PROJECT_PATH="~/projects/maps/mapstoryteller/template"
+# PROJECT_PATH="~/projects/maps/mapstoryteller/maplibre-storymap/demo"
